# github-actions-python

./: README.md  pyproject.toml  tox.ini
.github/workflows/: wf1.yml
tests/: test_something.py
