# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[project]
name = "foo_package"
version = "0.1"
dependencies = [
    "tornado",
    "watchdog"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "playwright", "pytest-playwright", "pytest-xvirt"]
dev = ["webtypy", "playwright"]
all = ["foo_package[test,dev]"]